# PIAIC_254568_ASSIGMENTS_QUARTER_02

./: README.md
ASSIGMENT-01/: main.py  message_formatter.py  project.toml
ASSIGNMENT-02/: .env
ASSIGNMENT-02/ASSIGNMENT-03/studybuddy/src/studybuddy/: my_study_buddy.py  study_buddy_conversation.md
ASSIGNMENT-02/hello-agent/: pyproject.toml
ASSIGNMENT-02/hello-agent/src/hello_agent/: agent_hello.py
ASSIGNMENT-03/: .env  README.md
ASSIGNMENT-03/studybuddy/: pyproject.toml
ASSIGNMENT-03/studybuddy/src/studybuddy/: my_study_buddy.py  study_buddy_conversation.md
ASSIGNMENT_02/hello-agent/: README.md  pyproject.toml
ASSIGNMENT_02/hello-agent/src/hello_agent/: agent_hello.py
studybuddy/: pyproject.toml
